name:                process-budget
version:             0.1.0.0
synopsis:            A breakdown of monthly spending by category
description:         Outputs a breakdown of monthly spending by category
homepage:            https://github.com/cphang99/budget_process.git
license:             BSD3
license-file:        LICENSE
author:              C.Phang
maintainer:          cphang99@gmail.com
copyright:           2017 C.Phang
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable process-budget-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ansi-wl-pprint
                     , bytestring
                     , cassava
                     , containers
                     , optparse-applicative
                     , split
                     , vector
                     , process-budget
  default-language:    Haskell2010

test-suite process-budget-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , process-budget
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cphang99/budget_process.git
